--- a/requirements_tf2.txt
+++ b/requirements_tf2.txt
@@ -1,13 +1,21 @@
 opencv-python==4.5.5.62
 tensorflow==2.12.0
 absl-py==1.4.0
-matplotlib==3.7.1
-numpy==1.23.0
-Pillow==9.5.0
+matplotlib==3.6.3
+numpy==1.23.5
+Pillow==9.4.0
 protobuf==3.20.3
 pycocotools==2.0.6
-pyparsing==3.1.0
-scipy==1.10.1
-urllib3==1.21.1
+pyparsing==3.0.9
+scipy==1.10.0
+urllib3==1.26.14
 keras==2.12.0
+contextlib2==21.6.0
+lxml==4.9.3
+tf-slim==1.1.0
+lvis==0.5.3
+pyyaml==6.0.1
+gin-config==0.5.0
+tensorflow-io==0.30.0
+absl-py==1.4.0
 
